fix main layout spacing

--- a/src/app/components/logs-expression-input.css
+++ b/src/app/components/logs-expression-input.css
@@ -4,5 +4,5 @@
 }
 
 .co-logs-expression-input__textInput {
-  margin-right: var(--pf-global--spacer--sm);
+  margin-right: var(--pf-global--spacer--md);
 }
